2023-03-18  dyuret  <dyuret@login03.kuacc.ku.edu.tr>

	* calvin_supervised_slurm.py:
	+ print out number/id of finished jobs.
	+ save their output as each job finishes.
	+ shorten job name, have both slurm id and job row number.
	+ when cancelled due to time limit it doesn't have the result, should eval outside.
	++ also necessary because internal eval may not match if instances_per_episode > 1.
	+ also save the step number of the optimum model.
	+ sometimes saves multiple checkpoints? interrupt-restarts? check all.
	+ figure out the major differences in ABC, and minor ones in ABCD.
	++ wnorm different, but expected, changed the calculation
	++ learning_rate parameter not passed correctly: may explain job_0, Transformer
	-- output_interval not the same as instances_per_episode, may explain job_1 LSTM: either add it back, or find optima with output_interval=1

	* TODO:
	+ transformer
	+ transformer hparam opt
	+ transformer: figure out the ABC hparams: decrease learning rate?
	= do a sensitivity to layers, heads, hidden etc. for each sota model
	- transformer: try max pooling and cls
	- transformer: look at the effect of positional encoding: does it help?
	- transformer: add nonlinearity at the input? at the output?
	- calvindataset: integrate 2frame into calvindataset as an option: in fact do a general stride argument
	- calvindataset: create an option that will compute and use differences of n frames as features
	- calvindataset: create an option that will take a subset of instances for learning curve
	- Learning curve experiments.
	- SSL experiments
	- Auto-label experiments
	- finish mlp feature exp with abcd
	- rnn and transformer feature exp
	- deprecate loaddata.py
	- Inputs: try different representations (voxels & convolution?) (3-D positional encoding?) (read Palm-E)

2023-03-17  dyuret  <dyuret@login03.kuacc.ku.edu.tr>

	* Transformer-hparams: